model User {
    id            String    @id @default(uuid())
    name          String?
    email         String?   @unique
    password      String?
    image         String?
    emailVerified DateTime?
    rank          Int       @default(0)
    accounts      Account[]
    sessions      Session[]
    posts         Post[]
    upvotes       Upvotes[]
    comments      Comment[]
    createdAt     DateTime  @default(now())
    updatedAt     DateTime  @updatedAt
}

// Future Use (Social Login) 💡
model Account {
    userId            String
    type              String
    provider          String
    providerAccountId String
    refresh_token     String?
    access_token      String?
    expires_at        Int?
    token_type        String?
    scope             String?
    id_token          String?
    session_state     String?

    createdAt DateTime @default(now())
    updatedAt DateTime @updatedAt

    user User @relation(fields: [userId], references: [id], onDelete: Cascade)

    @@id([provider, providerAccountId])
}

model Session {
    sessionToken String   @unique
    userId       String
    expires      DateTime
    user         User     @relation(fields: [userId], references: [id], onDelete: Cascade)

    createdAt DateTime @default(now())
    updatedAt DateTime @updatedAt
}

model VerificationToken {
    identifier String
    token      String
    expires    DateTime

    @@id([identifier, token])
}
