//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Project "contribute-api" {
  database_type: ''
  Note: ''
}

Table Post {
  id String [pk]
  title String [not null]
  desc String
  content String
  status PostStatus [not null, default: 'DRAFT']
  reviewStatus PostReviewStatus [not null, default: 'PLANNED']
  authorId String [not null]
  author User [not null]
  upvotes Upvotes [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  comments Comment [not null]
}

Table Upvotes {
  id String [pk]
  postId String [not null]
  userId String [not null]
  post Post [not null]
  user User [not null]
}

Table Comment {
  id String [pk]
  text String [not null]
  userId String [not null]
  postId String [not null]
  isReply Boolean [not null, default: false]
  repliedTo String
  user User [not null]
  post Post [not null]
  replyTo Comment
  replies Comment [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table User {
  id String [pk]
  name String
  email String [unique]
  password String
  image String
  emailVerified DateTime
  rank Int [not null, default: 0]
  accounts Account [not null]
  sessions Session [not null]
  posts Post [not null]
  upvotes Upvotes [not null]
  comments Comment [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Account {
  userId String [not null]
  type String [not null]
  provider String [not null]
  providerAccountId String [not null]
  refresh_token String
  access_token String
  expires_at Int
  token_type String
  scope String
  id_token String
  session_state String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user User [not null]

  indexes {
    (provider, providerAccountId) [pk]
  }
}

Table Session {
  sessionToken String [unique, not null]
  userId String [not null]
  expires DateTime [not null]
  user User [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table VerificationToken {
  identifier String [not null]
  token String [not null]
  expires DateTime [not null]

  indexes {
    (identifier, token) [pk]
  }
}

Enum PostStatus {
  DRAFT
  PUBLISHED
  ARCHIVED
}

Enum PostReviewStatus {
  PLANNED
  PROGRESS
  REVIEW
  COMPLETED
}

Ref: Post.authorId > User.id

Ref: Upvotes.postId > Post.id

Ref: Upvotes.userId > User.id

Ref: Comment.userId > User.id

Ref: Comment.postId > Post.id

Ref: Comment.repliedTo - Comment.id

Ref: Account.userId > User.id [delete: Cascade]

Ref: Session.userId > User.id [delete: Cascade]